--- a/styles.css
+++ b/styles.css
@@ -389,3 +389,36 @@ select {
 .admin-tables button {
     margin-top: 10px;
 }
+
+/* Style for the dropdown */
+.styled-select {
+    position: relative;
+    width: 150px;
+}
+
+.styled-select select {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    line-height: 1.3;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background: white;
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10"><polygon points="0,0 10,0 5,5" fill="%23333"/></svg>');
+    background-repeat: no-repeat;
+    background-position: right 10px center;
+    cursor: pointer;
+}
+
+.styled-select select:focus {
+    outline: none;
+    border-color: #6ca6cd;
+    box-shadow: 0 0 3px rgba(108, 166, 205, 0.5);
+}
+
+.styled-select select::-ms-expand {
+    display: none;
+}
