--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ header {
     margin-right: 20px;
 }
 
-.header-content .button {
+.header-content .button, .footer-login-info .button {
     background-color: #555;
     color: #fff;
     padding: 10px 20px;
@@ -29,9 +29,12 @@ header {
     text-decoration: none;
     border-radius: 5px;
     font-size: 16px;
+    cursor: pointer;
+    border-width: 0px;
+    box-shadow: 2px 2px 0 #000;
 }
 
-.header-content .button:hover {
+.header-content .button:hover, .footer-login-info .button {
     background-color: #777;
     font-size: 16px;
 }
@@ -70,7 +73,7 @@ main {
     padding-top: 150px;
 }
 
-.thread {
+.thread, .pm-conversation{
     background-color: #fff;
     margin-bottom: 20px;
     padding: 20px;
@@ -80,7 +83,7 @@ main {
     justify-content: space-between;
 }
 
-.thread:hover {
+.thread:hover, .pm-conversation:hover{
     box-shadow: 5px 5px 5px #555555;
 }
 
@@ -148,6 +151,8 @@ main {
     white-space: nowrap;
     z-index: 1;
     background-color: #555;
+    box-shadow: 2px 2px 0 #000;
+    border-radius: 5px;
 }
 
 .icon-button-settings:hover .icon-button-settings-tooltip {
@@ -241,7 +246,7 @@ form button {
     display: flex;
 }
 
-.message-info {
+.message-info, .pm-info {
     min-width: 150px;
 }
 
@@ -250,12 +255,12 @@ form button {
     max-width: 60px;
 }
 
-.message-info-date {
+.message-info-date, .pm-info-date {
     font-size: 12px;
     margin-bottom: 20px;
 }
 
-.message-info-name {
+.message-info-name, .pm-info-name {
     margin-top: 10px;
     font-size: 18px;
     font-weight: bold;
@@ -491,4 +496,36 @@ select {
     border-radius: 5px;
     padding: 5px;
     
+}
+
+.pm-info-date, .pm-info-name {
+    font-size: 14px;
+    font-weight: lighter;
+}
+
+.pm-content {
+    width: 100%;
+    display: block;
+    height: 100%;
+    text-decoration: none;
+    color: inherit;
+}
+
+.pm-form label {
+    margin-top: 20px;
+}
+
+.pm-form {
+    flex-direction: row;
+}
+
+.unread-count {
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    padding: 2px 5px;
+    font-size: 12px;
+    margin-left: 5px;
+    position: absolute;
+    transform: translateY(-15px);
 }
