--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,16 @@
+html {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
     margin: 0;
     padding: 0;
+    max-width: 1980px;
+    width: 100%;
 }
 
 header {
@@ -12,7 +20,8 @@ header {
     text-align: center;
     position: fixed;
     top: 0;
-    width: 100%
+    width: 100%;
+    max-width: 1980px;
 }
 
 .header-content {
@@ -174,8 +183,8 @@ main {
 
 
 .icon-button img {
-    width: 24px; /* Beispielbreite, kann angepasst werden */
-    height: 24px; /* Beispielhöhe, kann angepasst werden */
+    width: 24px; 
+    height: 24px;
 }
 
 .deleteInfo {
@@ -199,10 +208,24 @@ main {
     background-color: #fefefe;
     margin: 15% auto;
     padding: 20px;
-    border: 1px solid #888;
+    border-radius: 5px;
+    border: 3px solid #007bff;
     width: 80%;
     max-width: 500px;
     border-radius: 5px;
+}
+
+.modal-button {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.modal-button button {
+    min-width: 150px;
+}
+
+.modal-input {
+    display: grid;
 }
 
 .close {
@@ -453,7 +476,7 @@ select {
     cursor: pointer;
 }
 
-.styled-select select:focus {
+.styled-select select:focus, .search-input:focus {
     outline: none;
     border-color: #6ca6cd;
     box-shadow: 0 0 3px rgba(108, 166, 205, 0.5);
@@ -528,4 +551,13 @@ select {
     margin-left: 5px;
     position: absolute;
     transform: translateY(-15px);
+}
+
+.search-input {
+    min-width: 200px;
+    padding: 10px 20px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
 }
